force-app/main/default/objects/Commission_Detail_JAN__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>Area</description>
    <inlineHelpText>Area</inlineHelpText>
    <label>Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>