force-app/main/default/objects/Commission_Detail_JAN__c/fields/Credit_Applied__c.field-meta.xml
<CustomField>
    <fullName>Credit_Applied__c</fullName>
    <description>Credit Applied</description>
    <inlineHelpText>Credit Applied</inlineHelpText>
    <label>Credit Applied</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>