force-app/main/default/objects/Commission_Detail_JAN__c/fields/Incentive_Date__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Date__c</fullName>
    <description>Incentive Date</description>
    <inlineHelpText>Incentive Date</inlineHelpText>
    <label>Incentive Date</label>
    <type>Date</type>
</CustomField>