force-app/main/default/objects/Commission_Detail_JAN__c/fields/Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Code__c</fullName>
    <description>Item Code</description>
    <inlineHelpText>Item Code</inlineHelpText>
    <label>Item Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>