force-app/main/default/objects/Commission_Detail_JAN__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <description>Opportunity Name</description>
    <label>Opportunity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>