force-app/main/default/objects/Commission_Detail_JAN__c/fields/Position_Name__c.field-meta.xml
<CustomField>
    <fullName>Position_Name__c</fullName>
    <description>Position Name</description>
    <inlineHelpText>Position Name</inlineHelpText>
    <label>Position Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>